--- a/lifestyle_frontend/src/css/loginCreate.css
+++ b/lifestyle_frontend/src/css/loginCreate.css
@@ -1,9 +1,11 @@
-.bar, .nav {
-    background-color: rgb(255, 255, 255);
+.bar, .nav{
+    background-color: steelblue;
+    /* height: 3.3vh; */
     text-align: center;
 }
 
 .bar h1 {
+    color: black;
     display: inline;
     border-style: solid;
     border-color: navy;
